--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,23 @@
 body {
     background: pink;
+    color: whitesmoke;
+    font: bolder;
+}
+div {
+    color: rgba(67, 114, 255, 0.979);
+    font-size: 20px;
+    font-weight: normal;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    border-color: chartreuse;
+    border-style: dashed;
+    border-width: 9px;
+
+    margin: 9px;
+    padding: 8px;
+}
+
+h1 {
+    font-size: 30px;
+    font-style: italic;
 }
