--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,9 +6,15 @@
 <div>
   hello world 1
 </div>
-<div>
+<div class="text-red">
 hello world 2 
 </div>
 <div>
 hello world 3
 </div>
+
+outside of div 
+
+<a href="https://google.com"> google</a>
+
+<%= link_to "other" , "/other"%>
