--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -55,3 +55,11 @@ a {
 .container2 .inner {
     color: crimson;
 }
+
+.box {
+    background: rgb(255, 230, 90);
+    margin: 20px;
+    padding: 20px;
+    border-radius: 20px;
+    border: none;
+}
