--- a/app/assets/stylesheets/animals.scss
+++ b/app/assets/stylesheets/animals.scss
@@ -5,7 +5,7 @@
     width: 400px;
 }
 
-.animal-number {
+.animal {
     padding: 10px;
     background: rgb(182, 182, 255);
     margin: 10px;
@@ -14,4 +14,5 @@
     border-width: 10px;
     border: none;
     border-style: solid;
+    
 }
